ref#40 : 재고 확인, 재고 감소, 재고 복구 로직 분리