@@ -3,6 +3,7 @@ package com.bootakhae.productservice.controllers;
 import com.bootakhae.productservice.dto.ProductDto;
 import com.bootakhae.productservice.facade.RedissonInventoryFacade;
 import com.bootakhae.productservice.services.ProductService;
+import com.bootakhae.productservice.vo.request.ProductInfo;
 import com.bootakhae.productservice.vo.request.RequestStock;
 import com.bootakhae.productservice.vo.response.ResponseProduct;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +11,10 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @RestController
@@ -33,15 +37,15 @@ public class ProductFeignController {
     }
 
     /**
-     * 위시 리스트 상품 목록 조회
-     * - 한번에 여러 아이디 값의 상품들을 조회하기 위해 PostMapping
+     * 재고 확인
      * @from order-service
      */
     @PostMapping
-    public ResponseEntity<List<ResponseProduct>> getProducts(@RequestBody List<String> productIds){
-        List<ProductDto> productDetailsList = productService.getAllByProductIds(productIds);
-        List<ResponseProduct> responseList = productDetailsList.stream().map(ProductDto::dtoToVo).toList();
-        return ResponseEntity.status(HttpStatus.OK).body(responseList);
+    public ResponseEntity<Void> checkStock(@RequestBody List<ProductInfo> productInfoList){
+        productService.checkStock(productInfoList.stream()
+                .map(ProductInfo::voToDto)
+                .collect(Collectors.toList()));
+        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
     }
 
     /**
